--- a/introduction_to_applying_machine_learning/xgboost_customer_churn/xgboost_customer_churn-jp.ipynb
+++ b/introduction_to_applying_machine_learning/xgboost_customer_churn/xgboost_customer_churn-jp.ipynb
@@ -243,6 +243,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "次はそれぞれの特徴量とターゲット間の関係を見てみましょう。\n",
+    "\n",
     "Next let's look at the relationship between each of the features and our target variable."
    ]
   },
@@ -268,6 +270,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "面白いことにチャーンは: \n",
+    "- 地理的に均等に分布している\n",
+    "- 国際プランに入っている傾向がある\n",
+    "- ボイスメールには入らない傾向にある\n",
+    "- 日毎の利用時間が二峰性になっている (非解約者に比べて高いか低いかのどちらか)\n",
+    "- 多くの顧客がカスタマーサービスを使っている (多くの問題を経験した顧客が解約しやすい、というのは理解できる)\n",
+    "\n",
+    "これに加えて、解約者は `Day Mins` や `Day Charge` のような特徴量について非常に似通った分布をしていることがわかります。通話時間は金額と相関するため特に驚きはない。それでは特徴量の関係についてもう少し深く見てみましょう。\n",
+    "\n",
     "Interestingly we see that churners appear:\n",
     "- Fairly evenly distributed geographically\n",
     "- More likely to have an international plan\n",
@@ -295,6 +306,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "いくつかの特徴量は本質的に 100% の相関を持っていることが分かります。これらの特徴量ペアを含め、マイナーな冗長性やバイアスとして扱われるものもありますが、いくつかの機械学習のアルゴリズムには致命的な問題となる可能性があります。それぞれから高い相関を持つペアを取り除いてみましょう。Day Mins から Day Charge を、Night Mins から Night Charge を、Intl Mins から Intl Charge を除外します:\n",
+    "\n",
     "We see several features that essentially have 100% correlation with one another.  Including these feature pairs in some machine learning algorithms can create catastrophic problems, while in others it will only introduce minor redundancy and bias.  Let's remove one feature from each of the highly correlated pairs: Day Charge from the pair with Day Mins, Night Charge from the pair with Night Mins, Intl Charge from the pair with Intl Mins:"
    ]
   },
@@ -313,6 +326,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "さてこれでデータセットの前処理が終わったので、どのアルゴリズムを使うかを決定しましょう。上で述べたとおり、特定の値が高低どちらか (中間ではなく) にあればチャーンと予測できそうなことが分かっています。これを線形回帰などのアルゴリズムに入れるためには、多項式の (bucketed) 項を作る必要があります。かわりにこの問題を勾配ブースティング木を使ってモデル化することを考えましょう。Amazon SageMaker はマネージドで、分散学習でき、リアルタイム推論エンドポイントをデプロイできる XGBoost コンテナを提供しています。XGBoost は、特徴量とターゲット変数間の非線形な関係を自然に説明し、特徴量間の複雑な関係も記述する勾配ブースティング木を用いています。\n",
+    "\n",
+    "Amazon SageMaker XGBoost は CSV あるいは LibSVM フォーマットどちらのデータでも学習できます。この例では CSV にこだわります。データは\n",
+    "- 予測変数を1列目にもつ\n",
+    "- ヘッダ行をもたない\n",
+    "\n",
+    "必要があります。まずはじめにカテゴリ変数を数値に変換しましょう。\n",
+    "\n",
     "Now that we've cleaned up our dataset, let's determine which algorithm to use.  As mentioned above, there appear to be some variables where both high and low (but not intermediate) values are predictive of churn.  In order to accommodate this in an algorithm like linear regression, we'd need to generate polynomial (or bucketed) terms.  Instead, let's attempt to model this problem using gradient boosted trees.  Amazon SageMaker provides an XGBoost container that we can use to train in a managed, distributed setting, and then host as a real-time prediction endpoint.  XGBoost uses gradient boosted trees which naturally account for non-linear relationships between features and the target variable, as well as accommodating complex interactions between features.\n",
     "\n",
     "Amazon SageMaker XGBoost can train on data in either a CSV or LibSVM format.  For this example, we'll stick with CSV.  It should:\n",
@@ -338,6 +359,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "そして、データを training, validation, test セットに分けましょう。これによりモデルの過学習を防ぐことができ、未知のデータを用いてモデルの精度をテストすることができます。\n",
+    "\n",
     "And now let's split the data into training, validation, and test sets.  This will help prevent us from overfitting the model, and allow us to test the models accuracy on data it hasn't already seen."
    ]
   },
@@ -358,6 +381,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "これらのファイルを S3 にアップロードします。\n",
+    "\n",
     "Now we'll upload these files to S3."
    ]
   },
