--- a/introduction_to_applying_machine_learning/xgboost_customer_churn/xgboost_customer_churn-jp.ipynb
+++ b/introduction_to_applying_machine_learning/xgboost_customer_churn/xgboost_customer_churn-jp.ipynb
@@ -405,6 +405,8 @@
     "---\n",
     "## Train\n",
     "\n",
+    "トレーニングに移ります。まず XGBoost アルゴリズムコンテナの場所を指定する必要があります。\n",
+    "\n",
     "Moving onto training, first we'll need to specify the locations of the XGBoost algorithm containers."
    ]
   },
@@ -424,6 +426,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "次に、今回 CSV ファイルを使ってトレーニングを行うので、S3 に置いたファイルのポインターとして学習用の関数が使う `s3_input` を作ります。\n",
+    "\n",
     "Then, because we're training with the CSV file format, we'll create `s3_input`s that our training function can use as a pointer to the files in S3."
    ]
   },
@@ -443,6 +447,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ここで、いくつかのパラメータ -- 学習に使うインスタンスの種類と数、XGBoost のハイパーパラメータ -- を指定します。いくつかの重要なパラメータは: \n",
+    "- `max_depth` はアルゴリズム内でそれぞれの木がどれくらい深く作られるかをコントロールします。木が深いほどフィッティングは良くなりますが、計算量が多くなり過学習しやすくもなります。典型的にはモデルのパフォーマンスとトレードオフがあり、多数の浅い木と少数の深い木の間でパラメータを探索する必要があります。\n",
+    "- `subsample` は学習データのサンプリングをコントロールします。これは過学習を防ぎますが、あまり低くしすぎるとデータ不足になります。\n",
+    "- `num_round` はブースティングのラウンド数をコントロールします。これは本質的には前のイテレーションの残差を使って引き続きモデルを学習させます。これも、ラウンドを増やせば学習データに対するフィッティングは良くなりますが、計算量が増えたり過学習する可能性があります。\n",
+    "- `eta` は各ブースティングラウンドのアグレッシブさを決定します。値が大きい方が保守的なブースティングになります。\n",
+    "- `gamma` は木の成長がどれだけアグレッシブ化を決めます。大きい値のほうが保守的なモデルを作ります。\n",
+    "\n",
+    "詳細は GitHub [page](https://github.com/dmlc/xgboost/blob/master/doc/parameter.rst) を読んで XGBoost のハイパーパラメータを確認して下さい。\n",
+    "\n",
     "Now, we can specify a few parameters like what type of training instances we'd like to use and how many, as well as our XGBoost hyperparameters.  A few key hyperparameters are:\n",
     "- `max_depth` controls how deep each tree within the algorithm can be built.  Deeper trees can lead to better fit, but are more computationally expensive and can lead to overfitting.  There is typically some trade-off in model performance that needs to be explored between a large number of shallow trees and a smaller number of deeper trees.\n",
     "- `subsample` controls sampling of the training data.  This technique can help reduce overfitting, but setting it too low can also starve the model of data.\n",
@@ -488,6 +501,8 @@
     "---\n",
     "## Host\n",
     "\n",
+    "それではモデルを学習させたので、エンドポイントにデプロイしましょう。\n",
+    "\n",
     "Now that we've trained the algorithm, let's create a model and deploy it to a hosted endpoint."
    ]
   },
@@ -509,6 +524,8 @@
    "source": [
     "### Evaluate\n",
     "\n",
+    "これでエンドポイントは動いているので、http POST リクエストを投げることで、リアルタイム推論を非常に簡単に行うことができます。しかしまず、`test_data` の NumPy array をエンドポイントの裏のモデルに渡すために、シリアライザーとデシリアライザーを設定しなければなりません。\n",
+    "\n",
     "Now that we have a hosted endpoint running, we can make real-time predictions from our model very easily, simply by making an http POST request.  But first, we'll need to setup serializers and deserializers for passing our `test_data` NumPy arrays to the model behind the endpoint."
    ]
   },
@@ -529,6 +546,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "以下の機能を持った簡単な関数を作ります: \n",
+    "1. test データセットをループする\n",
+    "1. ミニバッチに分割する\n",
+    "1. CSV string payload に変換する\n",
+    "1. XGBoost エンドポイントを呼び出してミニバッチに対する予測を行う\n",
+    "1. 予測値を集めてモデルから出力された CSV を NumPy array に変換する\n",
+    "\n",
     "Now, we'll use a simple function to:\n",
     "1. Loop over our test dataset\n",
     "1. Split it into mini-batches of rows \n",
@@ -560,6 +584,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "機械学習モデルのパフォーマンスを比較する多くの方法がありますが、単純に正しい値と予測値を比べてみましょう。この場合、単純に顧客が解約する (`1`) か、しない (`0`) かを予測し、混同行列が得られます。\n",
+    "\n",
     "There are many ways to compare the performance of a machine learning model, but let's start by simply by comparing actual to predicted values.  In this case, we're simply predicting whether the customer churned (`1`) or not (`0`), which produces a simple confusion matrix."
    ]
   },
@@ -578,6 +604,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_[注意] アルゴリズムの乱択性により、結果が少し違って見えるかもしれません。_\n",
+    "\n",
+    "チャーンした人 48人のうち、39人を正しく予測することができました (true positive)。間違えて予測された4人はそのまま契約を続けるでしょう (false positive)。そのほか解約しないと予測された9人の顧客は実際にチャーンしています (false negative)。\n",
+    "\n",
+    "ここで重要な点は `np.round()` 関数が原因で0.5という単純な閾値 (カットオフ値) を設定していることです。`xgboost` からの予測は0から1の間の連続値を取るので、それを元々の2クラスに戻して解釈しています。しかし、離脱する顧客は、離脱しようとして企業がより積極的に引き留めようとする顧客よりもコストがかかることが期待されるので、このカットオフを調整する必要があります。これはほとんど確実に false positive を増やしますが、同時にtrue positive も増やし、false negative を減らします。\n",
+    "\n",
+    "ざっくりとした直観を得るために、予測結果の連続量を見てみましょう。\n",
+    "\n",
     "_Note, due to randomized elements of the algorithm, you results may differ slightly._\n",
     "\n",
     "Of the 48 churners, we've correctly predicted 39 of them (true positives). And, we incorrectly predicted 4 customers would churn who then ended up not doing so (false positives).  There are also 9 customers who ended up churning, that we predicted would not (false negatives).\n",
@@ -603,6 +637,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "モデルから出力された連続値は0と1の間ですが、0.1と0.9の間に十分な量があり、cutoffは予測される顧客数を変化させます。例えば、\n",
+    "\n",
     "The continuous valued predictions coming from our model tend to skew toward 0 or 1, but there is sufficient mass between 0.1 and 0.9 that adjusting the cutoff should indeed shift a number of customers' predictions.  For example..."
    ]
   },
@@ -621,9 +657,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "カットオフ値を0.5から0.3に変化させることで、もう1人の true positive と 3人の false positive、そして false negative が1人少なくなったことが分かります。数字は全体的に少ないですが、カットオフの変化により顧客の 6-10% に影響を与えています。これは正しい判断なのでしょうか？3人の顧客を繋ぎ止められますが、同時に5人に不要なインセンティブを与えていることになります。最適なカットオフを決めることは実世界に機械学習を応用する上で重要なステップになります。もう少し一般的に議論して、特定の、仮想的な解を適用しましょう。\n",
+    "\n",
     "We can see that changing the cutoff from 0.5 to 0.3 results in 1 more true positives, 3 more false positives, and 1 fewer false negatives.  The numbers are small overall here, but that's 6-10% of customers overall that are shifting because of a change to the cutoff.  Was this the right decision?  We may end up retaining 3 extra customers, but we also unnecessarily incentivized 5 more customers who would have stayed.  Determining optimal cutoffs is a key step in properly applying machine learning in a real-world setting.  Let's discuss this more broadly and then apply a specific, hypothetical solution for our current problem.\n",
     "\n",
     "### Relative cost of errors\n",
+    "\n",
+    "どんな2値分類問題も同じような感度のカットオフを生むことはありません。これはこれ自体では特に問題ではないです。結局、もし2クラスのスコアが十分簡単に分離可能なら、問題はそれほど難しくなく、ML ではなく単純なルールで問題を解くことが可能です。\n",
+    "\n",
+    "これより重要なのはもし ML モデルで推論させても、モデルが間違って false positive と false negative を割り振るコストがあることです。同じように、true positives と true negatives の正しい推論に付随したコストも見る必要があります。なぜなら、カットオフの選び方はこれらの統計量の4つ全てに関わるからで、各推論に対して4つの出力がどのようなビジネス上の相対コストを生むか考慮する必要があるからです。\n",
     "\n",
     "Any practical binary classification problem is likely to produce a similarly sensitive cutoff. That by itself isn’t a problem. After all, if the scores for two classes are really easy to separate, the problem probably isn’t very hard to begin with and might even be solvable with simple rules instead of ML.\n",
     "\n",
@@ -631,13 +673,21 @@
     "\n",
     "#### Assigning costs\n",
     "\n",
+    "今回問題にした携帯事業者の解約におけるコストとは何でしょうか? もちろんコストはビジネス上で取りうる具体的なアクションに依存します。ここでいくつかの仮定を置いてみましょう。\n",
+    "\n",
+    "はじめに、true negative のコストを ¥0 とします。我々のモデルは本質的に、この場合幸せな顧客正しく特定できていることになるので、何もする必要はありません。\n",
+    "\n",
+    "次に false negative は一番問題で、離脱しそうな顧客が留まると間違って予測するからです。顧客を失い、放棄所得、広告コスト、管理コスト、店頭コスト、そして恐らく携帯電話ハードウェア補助金を含む、代わりの顧客を獲得するコストを支払う必要があります。\n",
+    "\n",
+    "最後に、解約しそうとモデルが予測した顧客については、リテンションのためのインセンティブが仮に一万円だとしましょう。もし事業会社が自分にこういう譲歩をしてきたら、さすがに解約までにもう一回考え直すでしょう。これが true positive と false positive の結果に対するコストです。ここで false posivie (顧客は満足だが誤って離脱と予測) の場合、一万円を _ドブに捨てる_ ことになります。恐らくこの一万円をもっと賢く使うことはできたでしょうが、既存の顧客の支持を高める可能性もあるため、それほど悪い選択ではありません。\n",
+    "\n",
     "What are the costs for our problem of mobile operator churn? The costs, of course, depend on the specific actions that the business takes. Let's make some assumptions here.\n",
     "\n",
     "First, assign the true negatives the cost of \\$0. Our model essentially correctly identified a happy customer in this case, and we don’t need to do anything.\n",
     "\n",
     "False negatives are the most problematic, because they incorrectly predict that a churning customer will stay. We lose the customer and will have to pay all the costs of acquiring a replacement customer, including foregone revenue, advertising costs, administrative costs, point of sale costs, and likely a phone hardware subsidy. A quick search on the Internet reveals that such costs typically run in the hundreds of dollars so, for the purposes of this example, let's assume \\$500. This is the cost of false negatives.\n",
     "\n",
-    "Finally, for customers that our model identifies as churning, let's assume a retention incentive in the amount of \\$100. If my provider offered me such a concession, I’d certainly think twice before leaving. This is the cost of both true positive and false positive outcomes. In the case of false positives (the customer is happy, but the model mistakenly predicted churn), we will “waste” the \\$100 concession. We probably could have spent that \\$100 more effectively, but it's possible we increased the loyalty of an already loyal customer, so that’s not so bad."
+    "Finally, for customers that our model identifies as churning, let's assume a retention incentive in the amount of \\$100. If my provider offered me such a concession, I’d certainly think twice before leaving. This is the cost of both true positive and false positive outcomes. In the case of false positives (the customer is happy, but the model mistakenly predicted churn), we will \"waste\" the \\$100 concession. We probably could have spent that \\$100 more effectively, but it's possible we increased the loyalty of an already loyal customer, so that’s not so bad."
    ]
   },
   {
@@ -645,6 +695,17 @@
    "metadata": {},
    "source": [
     "#### Finding the optimal cutoff\n",
+    "\n",
+    "false negatives が false positives よりも相当コストがかかるのは明らかです。顧客数をもとにエラーを最適化するかわりに、このようなコスト関数を最小化しましょう: \n",
+    "\n",
+    "```txt\n",
+    "$500 * FN(C) + $0 * TN(C) + $100 * FP(C) + $100 * TP(C)\n",
+    "```\n",
+    "\n",
+    "ここで `FN(C)` は false negative がカットオフ `C` の関数であることを意味し、`TN, FP, TP` についても同様です。上の式の結果を最小化するカットオフ `C` を探す必要があります。\n",
+    "\n",
+    "これを行う素直な方法は、複数の考えられるカットオフについてシミュレーションを走らせることです。以下では100通りのカットオフについてforループで計算を行います。\n",
+    "\n",
     "\n",
     "It’s clear that false negatives are substantially more costly than false positives. Instead of optimizing for error based on the number of customers, we should be minimizing a cost function that looks like this:\n",
     "\n",
@@ -682,6 +743,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "上の図は、閾値を低くしすぎると全顧客に対してリテンションインセンティブを渡すことになりコストが跳ね上がることを示しています。一方で、閾値を高くしすぎるとあまりに多くの顧客を手放すことになり最終的に同じぐらいコストがかかります。全体のコストはカットオフが 0.46 のときに最小の 84万円 になり、何もしない場合に 200万円 以上失うのよりは圧倒的に良いという結果になります。\n",
+    "\n",
     "The above chart shows how picking a threshold too low results in costs skyrocketing as all customers are given a retention incentive.  Meanwhile, setting the threshold too high results in too many lost customers, which ultimately grows to be nearly as costly.  The overall cost can be minimized at \\$8400 by setting the cutoff to 0.46, which is substantially better than the \\$20k+ I would expect to lose by not taking any action."
    ]
   },
@@ -691,6 +754,15 @@
    "source": [
     "---\n",
     "## Extensions\n",
+    "\n",
+    "このノートブックでは顧客が離脱するのを予測するモデルを構築する方法と、true/false positive と false negative により生じるコストを最適化する閾値の決め方について披露しました。これを拡張するにはいくつかの方法が考えられます: \n",
+    "- リテンションインセンティブを受け取る顧客も離脱の可能性がある。インセンティブを受け取っても解約する確率を含めるとリテンションプログラムのROIが向上する。\n",
+    "- 低価格のプランに移行したり課金オプションを無効化する顧客は別の種類のチャーンとしてモデル化できる。\n",
+    "- 顧客行動の発展をモデル化する。もし使用量が落ちてカスタマーサービスへの連絡回数が増えている場合、解約される可能性が高い。顧客情報は行動傾向を取り入れるべきである。\n",
+    "- 実際の学習データと金銭的コストはもっと複雑になり得る。\n",
+    "- それぞれのチャーンに合わせた複数のモデルが必要。\n",
+    "\n",
+    "これらの複雑さに関わらず、このノートブックで説明したものと似たような原理は適用できるはずである。\n",
     "\n",
     "This notebook showcased how to build a model that predicts whether a customer is likely to churn, and then how to optimally set a threshold that accounts for the cost of true positives, false positives, and false negatives.  There are several means of extending it including:\n",
     "- Some customers who receive retention incentives will still churn.  Including a probability of churning despite receiving an incentive in our cost function would provide a better ROI on our retention programs.\n",
@@ -707,6 +779,9 @@
    "metadata": {},
    "source": [
     "### (Optional) Clean-up\n",
+    "\n",
+    "このノートブックによって作られたリソースを削除していい場合、以下のセルを実行してください。このコマンドは上で作成したエンドポイントを削除して意図しない請求を防ぐことができます。\n",
+    "(必要であれば、このノートブック自体を走らせているノートブックインスタンスも SageMaker のマネージメントコンソールから停止させて下さい。)\n",
     "\n",
     "If you're ready to be done with this notebook, please run the cell below.  This will remove the hosted endpoint you created and avoid any charges from a stray instance being left on."
    ]
