--- a/handson/pytorch/finetuning_torchvision_models_tutorial.ipynb
+++ b/handson/pytorch/finetuning_torchvision_models_tutorial.ipynb
@@ -126,6 +126,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!wget https://download.pytorch.org/tutorial/hymenoptera_data.zip\n",
+    "!unzip hymenoptera_data.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Top level data directory. Here we assume the format of the directory conforms \n",
     "#   to the ImageFolder structure\n",
     "data_dir = \"./hymenoptera_data\"\n",
