change variable name

--- a/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering.ipynb
+++ b/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "import sklearn.cluster\n",
     "import sklearn\n",
     "import re\n",
-    "from sagemaker import get_execution_role"
+    "import sagemaker"
    ]
   },
   {
@@ -48,13 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sagemaker = boto3.client('sagemaker')\n",
-    "\n",
     "# S3 バケットとプレフィックス\n",
-    "bucket = sagemaker.Session().default_bucket()\n",
+    "sess = sagemaker.Session()\n",
+    "bucket = sess.default_bucket()\n",
     "prefix = 'sagemaker/DEMO-kmeans'\n",
     "\n",
-    "role = get_execution_role()\n",
+    "role = sagemaker.get_execution_role()\n",
     "\n",
     "def get_gdelt(filename):\n",
     "    s3 = boto3.resource('s3')\n",
@@ -160,6 +159,7 @@
     "#特に多数の EC2 インスタンスを 1 度に作成し、上限に達するのを避けたい場合\n",
     "job_names = []\n",
     "\n",
+    "sagemaker_client = boto3.client('sagemaker')\n",
     "\n",
     "# すべての k でジョブを起動する\n",
     "for k in K:\n",
@@ -208,19 +208,19 @@
     "            }\n",
     "        ]\n",
     "    }\n",
+    "    \n",
+    "    sagemaker_client.create_training_job(**create_training_params)\n",
     "\n",
-    "    sagemaker.create_training_job(**create_training_params)\n",
-    "\n",
-    "    status = sagemaker.describe_training_job(TrainingJobName=job_name)['TrainingJobStatus']\n",
+    "    status = sagemaker_client.describe_training_job(TrainingJobName=job_name)['TrainingJobStatus']\n",
     "    print(status)\n",
     "    if not run_parallel_jobs:\n",
     "        try:\n",
-    "            sagemaker.get_waiter('training_job_completed_or_stopped').wait(TrainingJobName=job_name)\n",
+    "            sagemaker_client.get_waiter('training_job_completed_or_stopped').wait(TrainingJobName=job_name)\n",
     "        finally:\n",
-    "            status = sagemaker.describe_training_job(TrainingJobName=job_name)['TrainingJobStatus']\n",
+    "            status = sagemaker_client.describe_training_job(TrainingJobName=job_name)['TrainingJobStatus']\n",
     "            print(\"Training job ended with status: \" + status)\n",
     "            if status == 'Failed':\n",
-    "                message = sagemaker.describe_training_job(TrainingJobName=job_name)['FailureReason']\n",
+    "                message = sagemaker_client.describe_training_job(TrainingJobName=job_name)['FailureReason']\n",
     "                print('Training failed with the following error: {}'.format(message))\n",
     "                raise Exception('Training job failed')\n",
     "    \n",
@@ -235,18 +235,18 @@
    "source": [
     "while len(job_names):\n",
     "    try:\n",
-    "        sagemaker.get_waiter('training_job_completed_or_stopped').wait(TrainingJobName=job_names[0])\n",
+    "        sagemaker_client.get_waiter('training_job_completed_or_stopped').wait(TrainingJobName=job_names[0])\n",
     "    finally:\n",
-    "        status = sagemaker.describe_training_job(TrainingJobName=job_name)['TrainingJobStatus']\n",
+    "        status = sagemaker_client.describe_training_job(TrainingJobName=job_name)['TrainingJobStatus']\n",
     "        print(\"Training job ended with status: \" + status)\n",
     "        if status == 'Failed':\n",
-    "            message = sagemaker.describe_training_job(TrainingJobName=job_name)['FailureReason']\n",
+    "            message = sagemaker_client.describe_training_job(TrainingJobName=job_name)['FailureReason']\n",
     "            print('Training failed with the following error: {}'.format(message))\n",
     "            raise Exception('Training job failed')\n",
     "\n",
     "    print(job_name)\n",
     "\n",
-    "    info = sagemaker.describe_training_job(TrainingJobName=job_name)\n",
+    "    info = sagemaker_client.describe_training_job(TrainingJobName=job_name)\n",
     "    job_names.pop(0)"
    ]
   },
