--- a/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering.ipynb
+++ b/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering.ipynb
@@ -104,7 +104,7 @@
     "    return train_data\n",
     "\n",
     "# 1979 年用のデータセットを使用。\n",
-    "train_79 = prepare_gdelt(bucket, prefix, '1979', events, save_to_s3=False"
+    "train_79 = prepare_gdelt(bucket, prefix, '1979', events, save_to_s3=False)"
    ]
   },
   {
