inference example for kmeans (low-level)

--- a/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering_lowlevel.ipynb
+++ b/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering_lowlevel.ipynb
@@ -285,6 +285,125 @@
     "plt.title('Elbow graph')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up hosting for the model\n",
+    "以下では [[notebook](https://github.com/hariby/amazon-sagemaker-examples/blob/master/sagemaker-python-sdk/1P_kmeans_lowlevel/kmeans_mnist_lowlevel.ipynb)] を参考にして、推論用のエンドポイントを構築します。\n",
+    "\n",
+    "In order to set up hosting, we have to import the model from training to hosting. A common question would be, why wouldn't we automatically go from training to hosting?  And, in fact, the [k-means high-level example](/notebooks/sagemaker-python-sdk/1P_kmeans_highlevel/kmeans_mnist.ipynb) shows the functionality to do that.  For this low-level example though it makes sense to show each step in the process to provide a better understanding of the flexibility available.\n",
+    "\n",
+    "### Import model into hosting\n",
+    "Next, you register the model with hosting. This allows you the flexibility of importing models trained elsewhere, as well as the choice of not importing models if the target of model creation is AWS Lambda, AWS Greengrass, Amazon Redshift, Amazon Athena, or other deployment target."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primary_container = {\n",
+    "    'Image': image,\n",
+    "    'ModelDataUrl': info['ModelArtifacts']['S3ModelArtifacts']\n",
+    "}\n",
+    "\n",
+    "create_model_response = sagemaker_client.create_model(\n",
+    "    ModelName = job_name, \n",
+    "    ExecutionRoleArn = role, \n",
+    "    PrimaryContainer = primary_container\n",
+    ")\n",
+    "\n",
+    "print(create_model_response['ModelArn'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create endpoint configuration\n",
+    "Now, we'll create an endpoint configuration which provides the instance type and count for model deployment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import gmtime, strftime\n",
+    "\n",
+    "endpoint_config_name = 'KMeansEndpointConfig-' + strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
+    "print(endpoint_config_name)\n",
+    "create_endpoint_config_response = sagemaker_client.create_endpoint_config(\n",
+    "    EndpointConfigName = endpoint_config_name,\n",
+    "    ProductionVariants=[{\n",
+    "        'InstanceType':'ml.m4.xlarge',\n",
+    "        'InitialInstanceCount':1,\n",
+    "        'ModelName':job_name,\n",
+    "        'VariantName':'AllTraffic'}])\n",
+    "\n",
+    "print(\"Endpoint Config Arn: \" + create_endpoint_config_response['EndpointConfigArn'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create endpoint\n",
+    "Lastly, the customer creates the endpoint that serves up the model, through specifying the name and configuration defined above. The end result is an endpoint that can be validated and incorporated into production applications. This takes 9-11 minutes to complete."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "import time\n",
+    "\n",
+    "endpoint_name = 'KMeansEndpoint-' + strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
+    "print(endpoint_name)\n",
+    "create_endpoint_response = sagemaker_client.create_endpoint(\n",
+    "    EndpointName=endpoint_name,\n",
+    "    EndpointConfigName=endpoint_config_name)\n",
+    "print(create_endpoint_response['EndpointArn'])\n",
+    "\n",
+    "resp = sagemaker_client.describe_endpoint(EndpointName=endpoint_name)\n",
+    "status = resp['EndpointStatus']\n",
+    "print(\"Status: \" + status)\n",
+    "\n",
+    "try:\n",
+    "    sagemaker_client.get_waiter('endpoint_in_service').wait(EndpointName=endpoint_name)\n",
+    "finally:\n",
+    "    resp = sagemaker_client.describe_endpoint(EndpointName=endpoint_name)\n",
+    "    status = resp['EndpointStatus']\n",
+    "    print(\"Arn: \" + resp['EndpointArn'])\n",
+    "    print(\"Create endpoint ended with status: \" + status)\n",
+    "\n",
+    "    if status != 'InService':\n",
+    "        message = sagemaker_client.describe_endpoint(EndpointName=endpoint_name)['FailureReason']\n",
+    "        print('Training failed with the following error: {}'.format(message))\n",
+    "        raise Exception('Endpoint creation did not succeed')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validate the model for use\n",
+    "Finally, we'll validate the model for use. Let's generate a classification for a single observation from the trained model using the endpoint we just created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
