visualize kmeans with colored tsne

--- a/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering_lowlevel.ipynb
+++ b/introduction_to_amazon_algorithms/kmeans_news_clustering/kmeans_news_clustering_lowlevel.ipynb
@@ -333,8 +333,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import gmtime, strftime\n",
-    "\n",
     "endpoint_config_name = 'KMeansEndpointConfig-' + strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
     "print(endpoint_config_name)\n",
     "create_endpoint_config_response = sagemaker_client.create_endpoint_config(\n",
@@ -363,7 +361,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "import time\n",
     "\n",
     "endpoint_name = 'KMeansEndpoint-' + strftime(\"%Y-%m-%d-%H-%M-%S\", gmtime())\n",
     "print(endpoint_name)\n",
@@ -403,7 +400,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Simple function to create a csv from our numpy array\n",
+    "def np2csv(arr):\n",
+    "    csv = io.BytesIO()\n",
+    "    np.savetxt(csv, arr, delimiter=',', fmt='%g')\n",
+    "    return csv.getvalue().decode().rstrip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runtime = boto3.Session().client('runtime.sagemaker')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payload = np2csv(train_79[0:10000])\n",
+    "\n",
+    "response = runtime.invoke_endpoint(EndpointName=endpoint_name, \n",
+    "                                   ContentType='text/csv', \n",
+    "                                   Body=payload)\n",
+    "result = json.loads(response['Body'].read().decode())\n",
+    "\n",
+    "cluster_ids = np.array([int(result['predictions'][i]['closest_cluster']) for i in range(len(result['predictions']))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(6, 5))\n",
+    "X_tsne_1000 = X_tsne[:1000]\n",
+    "plt.scatter(X_tsne_1000[:, 0], X_tsne_1000[:, 1], c=cluster_ids[:1000])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
